# License-Plate-Detect-Recognition-via-Deep-Neural-Networks-accuracy-up-to-99.9

./: CMakeLists.txt  README.md  caffe.sln
caffe-vsproj/: caffe.sln
caffe-vsproj/caffe/: caffe.vcxproj  caffe.vcxproj.filters
caffe-vsproj/libClassification/: ICNNPredict.h  caffe-gpu.h  classification.hpp  classifierCaffe.cpp  classifierCaffe.h  libClassification.vcxproj  libClassification.vcxproj.filters  tform_fcn.cpp
caffe-vsproj/ocr_test/: common.h  ctcpp_entrypoint.cpp  (+4 more)
cmake/: ConfigGen.cmake  Dependencies.cmake  ProtoBuf.cmake
include/: ctc.h  ctcpp.h
libClassification/: MTMain.cpp  ReadMe.txt  caffe-gpu.h  classification.cpp  classifierCaffe.cpp  classifierCaffe.h  config.txt  debugTime.h  libClassification.vcxproj  libClassification.vcxproj.filters  stdafx.cpp  tform_fcn.cpp  tform_fcn.h
ocr_test/: ReadMe.txt  bktree.cpp  common.h  config.txt  levenshtein.h  ocr_test.cpp  ocr_test.vcxproj  ocr_test.vcxproj.filters  public.h
src/libClassification/: CMakeLists.txt  MTMain.cpp  classification.cpp  config.txt  tform_fcn.cpp
src/ocr_test/: CMakeLists.txt  ReadMe.txt  bktree.h  common.h  config.txt  levenshtein.cpp  ocr_test.cpp  stdafx.cpp  stdafx.h
src/ocr_test/model_platecar/: det1.caffemodel  det3.prototxt  det3_input.prototxt
src/ocr_test/plateCard_test/: label.txt
src/ocr_test/rec_test/char/: model.prototxt
src/ocr_test/rec_test/chinese/: cifar10_quick_iter_1009313.solverstate  model.caffemodel
tools/: caffe.cpp  compute_image_mean.cpp  convert_imageset.cpp  folder.h  readme.txt  test.cpp
train_mtcnn_LPR/: 基于caffe的mtcnn训练实现.docx
(+323 files in other folders)
